 - Deadzone estimation for game controllers
 - Analog inputs can be used for shortcuts
 - Menu items for specific solar sensor brightness levels
 - Remappable controls for tilt and gyroscope sensors
 - Status messages for actions taken while a game is running (e.g. save/load state)
 - Memory inspector
 - Screensaver can now be suspended while a game is running
Bugfixes:
 - GBA: Fix timers not updating timing when writing to only the reload register
 - All: Fix sanitize-deb script not cleaning up after itself
 - Qt: Fix Display object leak when closing a window
 - Qt: Fix .deb dependencies
 - GBA Audio: FIFOs should not poll DMAs that are not scheduled for audio
 - Qt: Fix "QOpenGLContext::swapBuffers() called with non-exposed window" warning
 - ARM7: Fix SWI and IRQ timings
 - GBA Audio: Force audio FIFOs to 32-bit
 - GBA Memory: Ensure changing the timing of a DMA reschedules it
 - Qt: Fix window not regaining focus after exiting savestate window
 - Qt: Fix regression where video would not record if the game had already started
 - GBA: Fix rewind boundary conditions
 - GBA: Add initial I/O register settings for background matrix registers
 - Qt: Fix potential crash if a gamepad causes focus to change
 - GBA Memory: Allow SRAM to be 64kB
 - Qt: Fix controller axis querying
 - GBA Memory: Improve Thumb open bus behavior
 - GBA Memory: Fix 32-bit loads from unaddress cartridge space
 - Qt: Fix multiplayer windows opening as the wrong size
 - Qt: Fix controllers sometimes not loading the right profile
 - GBA: Fix hang when loading a savestate if sync to video is enabled
 - Debugger: Fix use-after-free in breakpoint clearing code
 - Util: Fix resource leak in UTF-8 handling code
 - VFS: Fix resource leaks if some allocations fail
 - Debugger: Fix boundary conditions in tab completion
 - Video: Fix an issue with very long filenames
 - SDL: Fix boundary conditions for joystick adjustments
 - Util: Fix a null-pointer issue when attempting to delete a key